# keneric_qt6

./: CMakeLists.txt  README.md  compile.sh  keneric.cpp  keneric.h  kenericthumbnail.json  org.kde.keneric.metainfo.xml
Script/: README.md  keneric  keneric-application-010-mkv-cover  keneric-directory-001-nokeneric  keneric-directory-010-disk  keneric-directory-020-full  keneric-directory-030-cover  keneric-video-010-mkv-cover  keneric-video-999-all  keneric-x-matroska-010-mkv-cover
Services/: README.md
Services/Desktop/: keneric-hash-file.desktop  keneric-remove-thumbnails.desktop
Services/KenericCustomIcon/: README.md  keneric-custom-icon.desktop
Services/KenericDeleteCustomIcon/: README.md  keneric-delete-custom-icon  keneric-delete-custom-icon.desktop
Services/KenericHashFile/: README.md
Services/KenericRemoveThumbnails/: README.md  keneric-remove-thumbnails
Services/Scripts/: keneric-custom-icon  keneric-hash-file  keneric-recursive-remove-thumbnails
conf/: README.md  keneric.conf
docs/: Config.md  KenericScripts.md  README.md  ServiceMenus.md
readme/: readme.html
